Se agregó registro de pedido, consultas por categorías, entre otros cambios

--- a/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
@@ -52,7 +52,7 @@
 
     <td>{{ cliente.correo }}</td>
 
-    <td> <a routerLink='/clienteEliminar/{{cliente.identificacion}}'>  ver </a></td>
+    <td> <a routerLink='/clienteEliminar/{{cliente.correo}}'>  ver </a></td>
 
     </tr>
     
