--- a/floridaimportdotnet/ClientApp/src/app/florida/formulario-contacto/formulario-contacto.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/formulario-contacto/formulario-contacto.component.html
@@ -4,7 +4,7 @@
     
     <div class="col-md-6 offset-md-3">
     
-    <h2 class="text-success Padding">Contactenos</h2>
+    <h2 class="text-success Padding">Contáctenos</h2>
     
     <form class="Padding">
     
@@ -18,7 +18,7 @@
     <div class="form-group col">
   
       <input type="text" name="telefono" formControlName="apellido" class="form-control border border-success" 
-      placeholder="Telefono" />
+      placeholder="Teléfono" />
       
     </div>
 
@@ -40,7 +40,7 @@
   
     <div class="text-center">
         
-    <button class="btn btn-success mr-1">Enviar mensaje</button>
+    <button class="btn btn-success mr-1">Envíar mensaje</button>
     
     <button class="btn btn-secondary" type="reset">Cancel</button>
     
