--- a/floridaimportdotnet/ClientApp/src/app/florida/producto-consulta/producto-consulta.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/producto-consulta/producto-consulta.component.html
@@ -20,7 +20,7 @@
     
     <th scope="col">#</th>
     
-    <th scope="col">Codigo</th>
+    <th scope="col">Código</th>
     
     <th scope="col">Nombre </th>
     
@@ -54,7 +54,7 @@
 
     <td>{{ producto.proveedor }}</td>
 
-    <td> <a routerLink='home/productoEditar/{{producto.codigo}}'>  ver </a></td>
+    <td> <a routerLink='/productoEditar/{{producto.codigo}}'>  ver </a></td>
 
     </tr>
     
