--- a/floridaimportdotnet/ClientApp/src/app/florida/proveedor-consulta/proveedor-consulta.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/proveedor-consulta/proveedor-consulta.component.html
@@ -22,7 +22,7 @@
     
     <th scope="col">identificación / NIT</th>
     
-    <th scope="col">Nombre / Razon social</th>
+    <th scope="col">Nombre / Razón social</th>
     
     <th scope="col">Correo</th>
     
