--- a/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -7,7 +7,9 @@
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
-        <p class="text-white">Florida Import</p>
+        <p class="text-white">
+          <img src="./../../assets/Logo Florida Import.jpeg" alt="Random first slide" class="imagen" width="200" height="80">
+        </p>
       </a>
       <button
         class="navbar-toggler"
@@ -123,7 +125,7 @@
         </li>
         <li ngbDropdown class="nav-item">
           <a href (click)="false" class="nav-link text-success" ngbDropdownToggle>
-            Paises
+            Países
           </a>
           <div ngbDropdownMenu class="border border-success">
               <a class="dropdown-item text-success" [routerLink]="['/productoConsulta']">Consultar</a>
@@ -139,11 +141,7 @@
               <a class="dropdown-item text-success" [routerLink]="['/clienteRegistro']">Reportes</a>
           </div>
         </li>
-        <li class="nav-item" [routerLinkActive]="['link-active']">
-          <a class="nav-link text-success" [routerLink]="['/fetch-data']"
-            >Gestionar Ofertas</a
-          >
-        </li>
+
       </ul>
       </div>
     </div>
@@ -157,7 +155,9 @@
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
-        <p class="text-white">Florida Import</p>
+        <p class="text-white">
+          <img src="./../../assets/Logo Florida Import.jpeg" alt="Random first slide" class="imagen" width="200" height="80">
+        </p>
       </a>
       <button
         class="navbar-toggler"
@@ -198,11 +198,11 @@
         <a class="nav-link text-white letra" href="#productos">Productos</a>
           </li>
           <li ngbDropdown class="nav-item">
-            <a href (click)="false" class="nav-link text-white letra" ngbDropdownToggle>Categorias</a>
+            <a href (click)="false" class="nav-link text-white letra" ngbDropdownToggle>Categorías</a>
             <div ngbDropdownMenu class="border border-success">
-                <a class="dropdown-item text-success"  [routerLink]="['/']">Frutas</a>
-                <a class="dropdown-item text-success" >Verduras</a>
-                <a class="dropdown-item text-success" >Hortalizas</a>
+                <a class="dropdown-item text-success" [routerLink]="['/frutasConsulta']">Frutas</a>
+                <a class="dropdown-item text-success" [routerLink]="['/verdurasConsulta']">Verduras</a>
+                <a class="dropdown-item text-success" [routerLink]="['/hortalizasConsulta']">Hortalizas</a>
             </div>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
@@ -215,15 +215,10 @@
               >Agencias oficiales</a
             >
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-white letra" [routerLink]="['/fetch-data']"
-              >Ofertas</a
-            >
-          </li>
-          
+
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white letra" [routerLink]="['/formularioContacto']"
-              >Contactenos</a
+              >Contáctenos</a
             >
           </li>
         </ul>
@@ -233,6 +228,14 @@
         <!--Cliente-->
         <div *ngIf="rol=='Clien'" class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse nav justify-content-center row"
         [ngClass]="{ show: isExpanded }">
+        <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-white" [routerLink]="['/pedidoRegistro']">
+            <svg class="bi bi-cart2" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+            </svg>
+            {{num}}
+          </a>
+        </li>
         <li ngbDropdown class="nav-item">
           <a href (click)="false" class="nav-link text-white letra" ngbDropdownToggle>
             <svg class="bi bi-people-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -247,11 +250,6 @@
           </div>
         </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <button type="button" class="btn btn-success mr-1">
-              <span class="glyphicon glyphicon-shopping-cart"></span>
-            </button>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white letra" [routerLink]="['/clienteConsulta']"
               >Notificaciones</a
             >
@@ -261,8 +259,10 @@
         <div *ngIf="rol===null" class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse nav justify-content-center row"
         [ngClass]="{ show: isExpanded }">
         <li class="nav-item" [routerLinkActive]="['link-active']">
-          <a class="nav-link text-white" href="#">
-            <img src="../../assets/icons8-carrito-de-compras-64.png" width="30px" height="30px"/>
+          <a class="nav-link text-white" [routerLink]="['/pedidoRegistro']">
+            <svg class="bi bi-cart2" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+            </svg>
             {{num}}
           </a>
         </li>
